fix(test): replace Java 21 List.getLast() with Java 17 compatible get(size - 1)